@@ -11,6 +11,7 @@ SUBDIRS = \
 	demuxers \
 	libffmpeg \
 	libmpeg2 \
+	libmpeg2new \
 	liba52 \
 	libspudec \
 	libspucc \
